--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -358,7 +358,7 @@ h5 {
   }
 }
 header {
-  background-image: url(/assets/images/fast-food-fastfoodcity.png);
+  background-image: url(https://image.noelshack.com/fichiers/2024/18/4/1714605091-fast-food-fastfoodcity.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
