--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -75,7 +75,7 @@
 
 // -----------------------écran pc------------------------------------
 header {
-    background-image: url(/assets/images/fast-food-fastfoodcity.png);
+    background-image: url(https://image.noelshack.com/fichiers/2024/18/4/1714605091-fast-food-fastfoodcity.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
